<resources>
    <string name="app_name">Level Up</string>
    <string name="nav_date_countDown">Test Date Countdown</string>
    <string name="nav_create_test">Create Test</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_templates">Templates</string>
    <string name="nav_question_type">Question Type</string>
    <string name="nav_history">History</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Test Date Countdown</item>
        <item>Create Test</item>
        <item>Templates</item>
        <item>Question Type</item>
        <item>Stats</item>
        <item>History</item>

    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="pick_date">Pick a date</string>
    <string name="pick_date_value">_ _ / _ _ / _ _ _ _</string>
    <string name="countdown_txt">Countdown</string>
    <string name="pick_time">Pick a time</string>
    <string name="selected_date">Test date</string>
    <string name="change_test_date">Not Ready Yet?</string>
    <string name="time_up">Time\'s Up</string>
    <string name="countdown_ends">Countdown Ends!</string>
    <string name="countdown_begins">Countdown Begins!!</string>

    <string-array name="sections_array">
        <item>Quantitative</item>
        <item>Verbal</item>
        <item>Integrated Reasoning</item>
        <item>Analytical Writing Assessment</item>
    </string-array>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <string-array name="section_quantitative">
        <item>Algebra</item>
        <item>Geometry</item>
        <item>Number Properties</item>
        <item>Word Problems</item>
        <item>Fractions, Decimals &amp; Percents</item>
    </string-array>

    <string-array name="section_algebra">
        <item>Linear Equations</item>
        <item>Exponents &amp; Roots</item>
        <item>Quadratic Equations</item>
        <item>Formulas</item>
        <item>Inequalities</item>
    </string-array>

    <string-array name="section_geometry">
        <item>Polygons</item>
        <item>Triangles &amp; Diagonals</item>
        <item>Circles &amp; Cylinders</item>
        <item>Lines &amp; Angles</item>
        <item>Coordinate Plane</item>
    </string-array>

    <string-array name="section_number_properties">
        <item>Divisibility &amp; Primes</item>
        <item>Odds &amp; Evens</item>
        <item>Positives &amp; Negatives</item>
        <item>Combinatorics</item>
        <item>Probability</item>
    </string-array>

    <string-array name="section_word_problems">
        <item>Algebraic Translations</item>
        <item>Rates &amp; Work</item>
        <item>Statistics</item>
        <item>Consecutive Integers</item>
        <item>Overlapping Sets</item>
        <item>Extra Problem Types</item>
    </string-array>

    <string-array name="section_fractions_decimals">
        <item>Digits &amp; Decimals</item>
        <item>Fractions</item>
        <item>Percents</item>
        <item>Ratios</item>
        <item>FDPs</item>
    </string-array>

    <string-array name="section_verbal">
        <item>Critical Reasoning</item>
        <item>Reading Comprehension</item>
        <item>Sentence Correction</item>
        <item>Ratios</item>
        <item>FDPs</item>
    </string-array>

    <string-array name="section_critical_reasoning">
        <item>Describe the Role</item>
        <item>Find the Assumption</item>
        <item>Evaluate the Argument</item>
        <item>Strengthen the Argument</item>
        <item>Weaken the Argument</item>
        <item>Draw a Conclusion</item>
        <item>Explain the Discrepancy</item>
        <item>Restate the Conclusion</item>
        <item>Resolve a Problem</item>
        <item>Provide an Example</item>
        <item>Mimic the Argument</item>
        <item>Inference</item>
    </string-array>

    <string-array name="section_reading_comprehension">
        <item>Inference</item>
        <item>Specific Detail</item>
        <item>Main Idea</item>
        <item>Passage Structure</item>
        <item>Tone</item>
    </string-array>

    <string-array name="section_sentence_correction">
        <item>Subject-Verb Agreement</item>
        <item>Pronouns</item>
        <item>Modifiers</item>
        <item>Verbs</item>
        <item>Idioms</item>
        <item>Concision</item>
        <item>Meaning</item>
        <item>Parallelism</item>
        <item>Comparisons</item>
        <item>Quantity</item>
        <item>Connecting</item>
        <item>Punctuation</item>
    </string-array>

    <string name="no_of_questions">Total number of questions</string>
    <string name="time_per_section">Total time for this section</string>
    <string name="no_of_sections">Number of Sections</string>
    <string name="section_name">Section Name</string>
    <string name="time_for_section">Time to complete this Section</string>
    <string name="breaktime_per_section">Breaktime per section</string>
    <string name="template_name">Template Name</string>
    <string name="select_from">Select From</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="camera_permission_title">Camera Access Required</string>
    <string name="ok">OK</string>

        <string name="camera_permission" translatable="false">To . Please enable Camera Permissions from \"Settings\" - \"Permissions\" to continue.
    </string>
    <string name="action_settings">Settings</string>
  <string name="write_to_sdcard_permission_alert_msg" translatable="false">Storage permission is
        disabled. Enable it from \"Settings\" -> \"Permissions\" to continue.
    </string>
    <string name="cancel">Cancel</string>
    <string name="title_400">Something went wrong</string>
    <string name="enter_section_details">Please enter section details.</string>
</resources>
